Updaing test view
Making the test view to have an new feed

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
     "jQuery": "^1.7.4",
+    "jenkins-api": "^0.2.8",
     "jsx-loader": "^0.13.2",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
