--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "jQuery": "^1.7.4",
     "jenkins-api": "^0.2.8",
     "jsx-loader": "^0.13.2",
+    "node-sass": "^3.4.2",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
     "sass-loader": "^3.1.2",
     "socket.io": "^1.4.5",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.12"
+    "webpack": "^1.12.13"
   },
   "devDependencies": {
     "css-loader": "^0.23.1",
