--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jQuery": "^1.7.4",
     "jenkins-api": "^0.2.8",
     "jsx-loader": "^0.13.2",
+    "less": "^2.6.0",
     "node-sass": "^3.4.2",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
