--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "cheerio": "^0.20.0",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "express-react-views": "^0.9.0",
