--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "less": "^2.6.0",
     "node-sass": "^3.4.2",
     "react": "^0.14.6",
+    "react-addons-update": "^15.0.1",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
     "sass-loader": "^3.1.2",
     "socket.io": "^1.4.5",
     "url-loader": "^0.5.7",
+    "weather-js": "^1.0.2",
     "webpack": "^1.12.13"
   },
   "devDependencies": {
