--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass-loader": "^3.1.2",
     "socket.io": "^1.4.5",
     "url-loader": "^0.5.7",
+    "weather-icons": "^1.3.2",
     "weather-js": "^1.0.2",
     "webpack": "^1.12.13"
   },
