--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "express-react-views": "^0.9.0",
+    "fcm-node": "^1.0.15",
     "file-loader": "^0.8.5",
+    "firebase": "^3.4.1",
     "font-awesome": "^4.5.0",
     "jQuery": "^1.7.4",
     "jenkins-api": "^0.2.8",
